REGRESSION (r124723-r124741): 5 inspector/debugger tests failing on Apple Lion Debug WK1 (Tests) https://bugs.webkit.org/show_bug.cgi?id=93387

Patch by Peter Wang <peter.wang@torchmobile.com.cn> on 2012-08-13
Reviewed by Pavel Feldman.

Now the front-end has problem when setting the positon of breakpoint, so remove the comparing
of "column" to make the behavior back to the time as JSC cannot provide "column" info.
Refer to https://bugs.webkit.org/show_bug.cgi?id=93473.

No new test case for this bug.

* bindings/js/ScriptDebugServer.cpp:
(WebCore::ScriptDebugServer::hasBreakpoint):

Canonical link: https://commits.webkit.org/111669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125394 268f45cc-cd09-0410-ab3c-d52691b4dbfc